# Electron-KVM-rdev

./: .gitattributes  .gitignore  BUILD.md  CLAUDE.md  COMPATIBLE_DEVICES.md  COMPATIBLE_DEVICES_CN.md  FIRST_RELEASE_GUIDE.md  FIX_WINDOWS_BUILD_CHANGES.md  LINUX_FIX_QUICK_SUMMARY.md  LINUX_FIX_SUMMARY.md  LINUX_HID_SETUP.md  README.md  README_EN.md  RELEASE_GUIDE.md  RELEASE_QUICK_START.md  icon.icns  package-lock.json  package.json
.github/workflows/: release.yml
Claude_made_docs/: CI_CD_PLAN.md  ICON_GUIDE.md  LINUX_FIX_SUMMARY.md  NATIVE_BUILD_CHANGES.md  QUICK_FIX.md  RELEASE_INSTRUCTIONS.md  WINDOWS_BUILD_CHANGES.md
HID_CompliantDev/src/: Main.c
assets/: 99-hidraw-permissions.rules  Info.plist  entitlements.mac.plist  post-install.sh
native/: Cargo.toml
native/rdev-grabber/: Cargo.toml  index.d.ts  index.darwin-arm64.node  index.js  package-lock.json  package.json
native/rdev-grabber/src/: lib.rs
src/: compatible-devices.json  hid-manager.js  main.js  preload.js  video-server.js
src/renderer/: app.js  index.html  styles.css
